Set a width for the logo on the header in hopes of preventing it from jumping around.

--- a/public/css/partials/header.less
+++ b/public/css/partials/header.less
@@ -1,6 +1,6 @@
 ﻿header { float:left; width:100%; .gradient(@dark-gradient-top-colour, @dark-gradient-bottom-colour); position:fixed; z-index:11;
 	>div { max-width:@application-width; margin:auto; height:@header-height;  color:@primary-font-colour-dark-background; .border-box;
-		>div.logo { float:left; margin-right:@spacing; padding-left:@spacing;
+		>div.logo { float:left; margin-right:@spacing; padding-left:@spacing; width:81px;
 			>* { line-height:@header-height; height:@header-height; vertical-align:middle; display:inline-block; }
 			>div { float:left;
 				>img { height:26px; vertical-align:middle; }
